# wasm-bindgen-1359

lib-backend/: Cargo.toml
lib-backend/src/: lib.rs
lib-frontend/: Cargo.toml
lib-frontend/src/: lib.rs
user-crate/: Cargo.toml
user-crate/src/: lib.rs
